--- a/readme.html
+++ b/readme.html
@@ -56,7 +56,7 @@
                 All the code except code in vendor folder is written by Konstantin Kirillov.
                 Code in vendor/btb is also fully Konstantin's.
 
-                In case this readme is outdated, look at <a href="http://landkey.net/sand/zz/plaxbone">most recent version.</a>
+                <a href="http://landkey.net/sand/zz/plaxbone">Live and most recent version is at landkey.net/sand/zz/plaxbone</a>
 
                 <h3>Concept</h3>
 
