--- a/index-video-droid.html
+++ b/index-video-droid.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PlaxBone - Minimalist Parallax Plugin</title>
-    	<meta charset="utf-8">
+        <title>Minimalist Parallax Application</title>
+        <meta charset="utf-8">
         <meta name="viewport"                   content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-    	<!-- meta name="viewport"		        content="width=device-width" -->
         <link   href="app/css/app.css"          rel="stylesheet">
         <script src="vendor/jquery-1.11.3.js"></script>
-    	<script src="vendor/btb/debug.js"></script>
-    	<script src="vendor/btb/core.js"></script>
-        <script src="app/js/events.js"></script>
+        <script src="vendor/btb/debug.js"></script>
+        <script src="vendor/btb/core.js"></script>
+        <script src="vendor/btb/throttled-animation-frame.js"></script>
+        <script src="vendor/btb/feature-detectors.js"></script>
         <script src="app/js/init.js"></script>
-		<script src="app/js/start.js"></script>
-		<script src="vendor/btb/throttled-animation-frame.js"></script>
-		<script src="vendor/btb/feature-detectors.js"></script>
-
+        <script src="app/js/start.js"></script>
+        <script src="app/js/events.js"></script>
     </head>
     <body>
 
